--- a/css/all.css
+++ b/css/all.css
@@ -17,6 +17,9 @@ header {
   width: 100%;
   height: 600px; }
 
+.ui-match {
+  background: yellow; }
+
 #sidebar {
   margin-top: 20px; }
 
@@ -24,13 +27,24 @@ header {
   display: none; }
 
 #load-display {
+  width: 500px;
+  height: 270px;
+  margin: 0 auto;
+  background: url(../images/loader.gif) no-repeat 0 0; }
+
+.geoCode-lunch {
   position: absolute;
-  width: 220px;
-  height: 220px;
-  top: 50%;
-  left: 50%;
-  margin: -110px 0 0 -110px;
-  background: url(../images/loader.GIF) no-repeat 0 0; }
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  font-size: 1px;
+  color: #eaeaea; }
+
+#issue-tracker {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 200px; }
 
 .slide-container {
   position: relative; }
