--- a/css/all.scss
+++ b/css/all.scss
@@ -51,6 +51,7 @@ header {
   width: 100%;
   height: 600px;
 }
+.ui-match { background: yellow; }
 
 #sidebar {
   margin-top: 20px;
@@ -60,14 +61,27 @@ header {
 }
 
 #load-display {
-  position: absolute;
-  width: 220px;
-  height: 220px;
-  top: 50%;
-  left: 50%;
-  margin: -110px 0 0 -110px;
-  background: url(../images/loader.GIF) no-repeat 0 0;
+  width: 500px;
+  height: 270px;
+  margin: 0 auto;
+  background: url(../images/loader.gif) no-repeat 0 0;
 }
+
+.geoCode-lunch {
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  font-size: 1px;
+  color: #eaeaea;
+}
+#issue-tracker {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 200px;
+}
+
 // ANIMATIONS
 .slide-container {
   position: relative;
