--- a/partials/results.html
+++ b/partials/results.html
@@ -1,20 +1,8 @@
 <div id="load-display"></div>
 <div id="results">
-    <!-- search stuff -->
-    <h2>Search <b>{{(contracts | filter:search).length}}</b> Prime Contractors</h2>
-    <div class="row">
-        <div class="form-group col-md-6">
-            <label class="sr-only" for="keyword">Search</label>
-            <input class="col-sm-12 form-control" type="text" ng-model="query" id="keyword" placeholder="Company name, NAICS Code, P/S Description">
-        </div>
-        <div class="form-group col-md-6">
-            <label class="sr-only" for="location">Location</label>
-            <input class="col-sm-12 form-control" id="location" type="text" ng-model="location" placeholder="City, State or Zip Code" typeahead="address for address in getLocation($viewValue)" typeahead-loading="loadingLocations">
-        </div>
-    </div>
-    <!-- end search stuff -->
-    <h3>Results</h3>
-    <div ng-repeat="contract in contracts | filter:search | limitTo:totalDisplayed">
+    <h3>We've found {{(contracts | filter:search).length}} results</h3>
+    <h5>Filter by: <button>some filter</button></h5>
+    <div ng-repeat="contract in contracts | filter:search">
         <div class="well">
             <header>
                 <h3>{{contract.contractor}}</h3>
