--- a/css/all.scss
+++ b/css/all.scss
@@ -51,7 +51,7 @@ header {
   width: 100%;
   height: 600px;
 }
-.ui-match { background: yellow; }
+.match { background: yellow; }
 
 #sidebar {
   margin-top: 20px;
