--- a/css/all.css
+++ b/css/all.css
@@ -6,45 +6,35 @@
 body {
   overflow-x: hidden; }
 
-.container {
-  position: relative; }
-
-header {
-  border-bottom: 1px solid #555; }
-
-.gridStyle {
-  border: 1px solid #d4d4d4;
-  width: 100%;
-  height: 600px; }
-
 .match {
   background: yellow; }
-
-#sidebar {
-  margin-top: 20px; }
 
 #results {
   display: none; }
 
 #load-display {
-  width: 500px;
-  height: 270px;
-  margin: 0 auto;
-  background: url(../images/loader.gif) no-repeat 0 0; }
-
-.geoCode-lunch {
+  padding-bottom: 150px;
   position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  font-size: 1px;
-  color: #eaeaea; }
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -100px;
+  background: #eaeaea url(../images/loader.gif) no-repeat 50% 95%;
+  -webkit-box-shadow: 2px 4px 2px 1px #555555;
+  -moz-box-shadow: 2px 4px 2px 1px #555555;
+  box-shadow: 2px 4px 2px 1px #555555; }
 
-#issue-tracker {
+.popup-icon {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 200px; }
+  right: 10px;
+  top: 100%;
+  margin-top: -20px;
+  height: 50px; }
+
+.result {
+  position: relative; }
+
+#export-option {
+  margin-top: 15px; }
 
 .slide-container {
   position: relative; }
