--- a/css/all.scss
+++ b/css/all.scss
@@ -39,48 +39,38 @@
 body {
   overflow-x: hidden;
 }
-.container {
-  position: relative;
-}
-header {
-  border-bottom: 1px solid #555;
-}
-
-.gridStyle {
-  border: 1px solid rgb(212,212,212);
-  width: 100%;
-  height: 600px;
-}
 .match { background: yellow; }
 
-#sidebar {
-  margin-top: 20px;
-}
 #results {
   display: none;
 }
 
 #load-display {
-  width: 500px;
-  height: 270px;
-  margin: 0 auto;
-  background: url(../images/loader.gif) no-repeat 0 0;
+  padding-bottom: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -100px;
+  background: #eaeaea url(../images/loader.gif) no-repeat 50% 95%;
+  @include box-shadow(2px 4px 2px 1px, #555);
 }
 
-.geoCode-lunch {
+.popup-icon {
   position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  font-size: 1px;
-  color: #eaeaea;
+  right: 10px;
+  top: 100%;
+  margin-top: -20px;
+  height: 50px;
 }
-#issue-tracker {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 200px;
+
+.result {
+  position: relative;
 }
+#export-option {
+  margin-top: 15px;
+}
+
+
 
 // ANIMATIONS
 .slide-container {
