--- a/css/all.css
+++ b/css/all.css
@@ -15,20 +15,22 @@ body {
 #load-display {
   padding-bottom: 150px;
   position: absolute;
-  top: 50%;
+  top: 200px;
   left: 50%;
-  margin: -100px 0 0 -100px;
+  margin-left: -100px;
   background: #eaeaea url(../images/loader.gif) no-repeat 50% 95%;
   -webkit-box-shadow: 2px 4px 2px 1px #555555;
   -moz-box-shadow: 2px 4px 2px 1px #555555;
   box-shadow: 2px 4px 2px 1px #555555; }
 
-.popup-icon {
+.open-icon {
   position: absolute;
   right: 10px;
   top: 100%;
   margin-top: -20px;
-  height: 50px; }
+  height: 50px;
+  cursor: pointer;
+  color: blue; }
 
 .result {
   position: relative; }
