--- a/css/all.scss
+++ b/css/all.scss
@@ -48,9 +48,8 @@ body {
 #load-display {
   padding-bottom: 150px;
   position: absolute;
-  top: 200px;
-  left: 50%;
-  margin-left: -100px;
+  top: 150px;
+  left: 250px;
   background: #eaeaea url(../images/loader.gif) no-repeat 50% 95%;
   @include box-shadow(2px 4px 2px 1px, #555);
 }
