--- a/css/all.scss
+++ b/css/all.scss
@@ -67,10 +67,14 @@ body {
 .result {
   position: relative;
 }
-#export-option {
-  margin-top: 15px;
-}
 
+.clear-filter {
+  position: absolute;
+  right: 0;
+  top: 60%;
+  cursor: pointer;
+  color: red;
+}
 
 
 // ANIMATIONS
